--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "vue-axios": "^3.2.4"
   },
   "devDependencies": {
-    "execa": "latest",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "execa": "latest",
+    "rimraf": "^3.0.2"
   },
   "eslintConfig": {
     "root": true,
