--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
+    "@vueform/multiselect": "^1.3.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
+    "vue-next-select": "^1.3.5",
     "vue-router": "^4.0.5",
     "vuex": "^4.0.0"
   },
