--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-axios": "^3.2.4",
     "vue-next-select": "^1.3.5",
     "vue-router": "^4.0.5",
+    "vuedraggable": "^4.0.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
