--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vueform/multiselect": "^1.3.5",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "gh-pages": "^3.1.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
     "vue-next-select": "^1.3.5",
