--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,6 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "request": "~2.36.0"
+    "request": "^2.88.2"
   }
 }
