--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/leventekobor94/redmine-yearly-recap#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bunyan": "^1.8.15",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
