--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/leventekobor94/redmine-yearly-recap#readme",
   "dependencies": {
+    "apicache": "^1.6.3",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.15",
     "cors": "^2.8.5",
